# ucan_config

./: .gitignore  Cargo.toml  README.md
config/: FDCAN_Device_DescritionDef.json  FDCAN_ErrorCountersTypeDef.json  FDCAN_InitTypeDef.json  FDCAN_MsgRamAddressTypeDef.json  FDCAN_ProtocolStatusTypeDef.json  FDCAN_RxHeaderTypeDef.json  FDCAN_TxEventFifoTypeDef.json  FDCAN_TxHeaderTypeDef.json  UCAN_AckFrameDef.json  UCAN_Get_CAN_Status.json  UCAN_InitFrameDef.json  UCAN_RxFrameDef.json  UCAN_TxFrameDef.json
src/: bindings.rs  main.rs
tests/: integration_tests.rs
