[package]
name = "ucan_config"
version = "0.1.0"
authors = ["LJ <juranek.lukasz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
zmq = { version = "0.9.2", default-features = true }
[features]
default = ["vendored-zmq"]
vendored-zmq = ["zmq/vendored"]
