[package]
name = "ucan_config"
version = "0.1.0"
authors = ["LJ <juranek.lukasz@gmail.com>",
           "Marcin Janczara <marcin@mydevlog.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
zmq = { version = "0.9.2", default-features = true }
libc = "0.2.71"
libusb = "0.3"
libusb-sys = "0.2.3"
bincode = "1.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
serde-big-array = "0.3.0"

[features]
default = ["vendored-zmq"]
vendored-zmq = ["zmq/vendored"]

[dev-dependencies]
predicates = "1"
assert_cmd = "1.0.1"

[patch.crates-io]
"libusb-sys" = { git = "https://github.com/cmsd2/libusb-sys" }